feat #4 -> Update UI for WeatherFragment
This commit enhances the user interface of the `WeatherFragment` by:
- Adding a gradient background and a location icon.
- Displaying more comprehensive weather details including temperature (current, max, min, feels like), humidity, wind speed, and pressure.
- Changing the weather data units from Metric to Imperial.
- Updating `WeatherViewController` to populate the new UI elements.
- Refactoring `fragment_weather.xml` to accommodate the new design and data points using `ConstraintLayout` for better positioning.